fix(semantics): change exception type for null declarations validation
- Updated `SymbolBindingResult` constructor to throw `IllegalArgumentException` instead of `NullPointerException` when null declarations are provided
- Modified test case in `SymbolBindingResultTest` to reflect the new exception type and message

This change improves the clarity of error handling by using a more appropriate exception type for invalid input, ensuring that users receive clearer feedback when attempting to create a `SymbolBindingResult` with null values.